--- a/ChartEditor/ChartEditor.csproj
+++ b/ChartEditor/ChartEditor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
@@ -26,5 +26,25 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.18" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
     <PackageReference Include="YamlDotNet" Version="13.0.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Views\Control\AggregationLineControl.axaml.cs">
+      <DependentUpon>AggregationLineControl.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Control\AssociationLineControl.axaml.cs">
+      <DependentUpon>AssociationLineControl.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Control\CompositionLineControl.axaml.cs">
+      <DependentUpon>CompositionLineControl.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Control\DependencyLineControl.axaml.cs">
+      <DependentUpon>DependencyLineControl.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Control\ImplementationLineControl.axaml.cs">
+      <DependentUpon>ImplementationLineControl.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Control\InheritanceLineControl.axaml.cs">
+      <DependentUpon>InheritanceLineControl.axaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
